kubernetes/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivebox
  labels:
    app.kubernetes.io/name: hivebox
    app.kubernetes.io/part-of: hivebox
