kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
  namespace: hivebox
  labels:
    app.kubernetes.io/name: hivebox
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hivebox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hivebox
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: hivebox
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: hivebox
          image: hivebox:v0.2.0
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
