kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox
  namespace: hivebox
  labels:
    app.kubernetes.io/name: hivebox
    app.kubernetes.io/part-of: hivebox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hivebox
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
