kubernetes/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hivebox
  namespace: hivebox
  labels:
    app.kubernetes.io/name: hivebox
    app.kubernetes.io/part-of: hivebox
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: hivebox
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: hivebox
          port: 8000
          weight: 1
